Add Social Media

--- a/index.html
+++ b/index.html
@@ -39,13 +39,19 @@
             <div class="ctn-content">
                 <div class="ctn-job-title">
                     <h1>
-                        I'm Atiya Oualid,<span class="input"> Front End Developer</span>  
+                        I'm A <span class="input"> Front End Developer</span>  
                     </h1>
                 </div>
                 <div class="ctn-desc">
                     <p>
-                        Hi There! A passionate professional specializing in creating modern, responsive, and user-friendly websites. I turn ideas into functional designs with clean code and a focus on performance. Let's build something amazing together!
+                        Hi There! i'm Atiya Oualid A Passionate professional specializing in creating modern, responsive, and user-friendly websites. I turn ideas into functional designs with clean code and a focus on performance. Let's build something amazing together!
                     </p>
+                </div>
+                <div class="ctn-icons">
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
                 <div class="ctn-btns">
                     <a id="contact-btn" href="./contact.html">Contact Me</button>
