--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="main-container">
         <header>
             <div class="ctn-logo">
-                <h2><a href="index.html">OUALID</a></h2>
+                <h2><a href="index.html"><span>{</span>OUALID<span>}</span></a></h2>
             </div>
             <nav>
                 <div class="ctn-title-btn">
@@ -48,10 +48,10 @@
                     </p>
                 </div>
                 <div class="ctn-icons">
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://github.com/Oualid-Atiya" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/oualid-atiya-970823282/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/oualid_dev/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://wa.me/212644873808" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
                 <div class="ctn-btns">
                     <a id="contact-btn" href="./contact.html">Contact Me</button>
