Add About Page And modefied Some javascript

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <div class="ctn-links">
                     <a href="index.html">Home</a>
                     <a href="#">Projects</a>
+                    <a href="#about-page">About Me</a>
                     <a href="#">Contact</a>
-                    <a href="#">About</a>
                 </div>
             </nav>
             <div class="menu-btn">
@@ -39,7 +39,7 @@
             <div class="ctn-content">
                 <div class="ctn-job-title">
                     <h1>
-                        I'm A <span class="input"> Front End Developer</span>  
+                        I'm <span class="input"></span>  
                     </h1>
                 </div>
                 <div class="ctn-desc">
@@ -64,6 +64,23 @@
                 </div>
             </div>
 
+        </section>
+        <section id="about-page" >
+            <div class="image-part">
+                <div class="ctn-img">
+                    <img src="./images/about2.png" alt="about-picture">
+                </div>
+            </div>
+            <div class="about-content">
+                <div class="title">
+                    <h2>About Me</h2>
+                </div>
+                <p>
+                    Hi, I'm Atiya Oualid, a passionate web developer dedicated to crafting modern, functional, and visually appealing websites. With one And Half Year of experience, I specialize in building responsive designs, ensuring smooth user experiences, and turning ideas into reality with clean and efficient code.
+                    I thrive on challenges and love working on projects that push my creativity and technical skills. Whether it's creating a portfolio, eCommerce site, or web application, my goal is to deliver results that make an impact.
+                    When I'm not coding, I enjoy Playing FootBall Or Watching Tv Shows Or Movies.
+                </p>
+            </div>
         </section>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.js"></script>
