--- a/index.html
+++ b/index.html
@@ -65,6 +65,50 @@
             </div>
 
         </section>
+        <section class="projects-page">
+            <div class="title"><h2>My Projects</h2></div>
+            <div class="ctn-projects">
+                <div class="project">
+                    <div class="ctn-img">
+                        <img src="./images/project1.png" alt="project_image">
+                    </div>
+                    <div>
+                    <div class="project-title">
+                        <h3>Ecommerce Website</h3>
+                    </div>
+                    <div class="project-desc">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Quo similique expedita nulla, alias quas voluptatibus?
+                        </p>
+                    </div>
+                    <div class="ctn-btn">
+                        <a href="#" class="view-btn" >View Project <i class="fa-solid fa-arrow-right" style="margin-left: 5px;"></i></a>
+                    </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="ctn-img">
+                        <img src="./images/project2.png" alt="project_image">
+                    </div>
+                    <div>
+                    <div class="project-title">
+                        <h3>Ecommerce Website</h3>
+                    </div>
+                    <div class="project-desc">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Quo similique expedita nulla, alias quas voluptatibus?
+                        </p>
+                    </div>
+                    <div class="ctn-btn">
+                        <a href="#" class="view-btn" >View Project <i class="fa-solid fa-arrow-right" style="margin-left: 5px;"></i></a>
+                    </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
         <section id="about-page" >
             <div class="image-part">
                 <div class="ctn-img">
@@ -82,6 +126,7 @@
                 </p>
             </div>
         </section>
+
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.js"></script>
     <script src="./main.js"></script>
