Add Projects Page and Contact Page

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 </div>
                 <div class="ctn-links">
                     <a href="index.html">Home</a>
-                    <a href="#">Projects</a>
+                    <a href="#projects-page">Projects</a>
                     <a href="#about-page">About Me</a>
-                    <a href="#">Contact</a>
+                    <a href="#contact-page">Contact</a>
                 </div>
             </nav>
             <div class="menu-btn">
@@ -54,7 +54,7 @@
                     <a href="https://wa.me/212644873808" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
                 <div class="ctn-btns">
-                    <a id="contact-btn" href="./contact.html">Contact Me</button>
+                    <a id="contact-btn" href="#contact-page">Contact Me</button>
                     <a id="download-btn">Download Cv</a>
                 </div>
             </div>
@@ -65,7 +65,7 @@
             </div>
 
         </section>
-        <section class="projects-page">
+        <section id="projects-page">
             <div class="title"><h2>My Projects</h2></div>
             <div class="ctn-projects">
                 <div class="project">
@@ -126,7 +126,20 @@
                 </p>
             </div>
         </section>
-
+        <section id="contact-page">
+            <div class="ctn-form">
+                    <div class="title"><h2>Contact Me</h2></div>
+                    <form   action="https://formspree.io/f/xrgnjgkd" method="post">
+                        <input type="text" placeholder="Your Name">
+                        <input type="text" name="email" placeholder="Your Email">
+                        <textarea  name="message"  cols="30" rows="10" placeholder="Your Request"></textarea>
+                        <button>Send Message</button>
+                    </form>
+                </div>
+        </section>
+        <footer>
+            
+        </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.js"></script>
     <script src="./main.js"></script>
