--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="ctn-btns">
                     <a id="contact-btn" href="#contact-page">Contact Me</button>
-                    <a id="download-btn">Download Cv</a>
+                    <a id="download-btn" href="./myResume2.pdf" download>Download Cv</a>
                 </div>
             </div>
             <div class="ctn-personal-picture">
@@ -132,13 +132,13 @@
                     <form   action="https://formspree.io/f/xrgnjgkd" method="post">
                         <input type="text" placeholder="Your Name">
                         <input type="text" name="email" placeholder="Your Email">
-                        <textarea  name="message"  cols="30" rows="10" placeholder="Your Request"></textarea>
+                        <textarea  name="message"  cols="30" rows="10" placeholder="Your Message"></textarea>
                         <button>Send Message</button>
                     </form>
                 </div>
         </section>
         <footer>
-            
+
         </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.js"></script>
