modefied resume link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="ctn-btns">
                     <a id="contact-btn" href="#contact-page">Contact Me</button>
-                    <a id="download-btn" href="./myResume2.pdf" download>Download Cv</a>
+                    <a id="download-btn" href="./oualid_atiya.pdf" download>Download Cv</a>
                 </div>
             </div>
             <div class="ctn-personal-picture">
